// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/pages/episode/index.jsx <Episode /> should render and match snapshot when is not pending 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Episode
    episode={
      Object {
        "data": Object {
          "summary": "",
        },
      }
    }
    episodesList={
      Object {
        "image": Object {
          "original": "Original.jpg",
        },
        "name": "Episode",
      }
    }
    getEpisode={
      [MockFunction] {
        "calls": Array [
          Array [
            "episode/episode 1",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "episode/episode 1",
          },
        ],
      }
    }
    location={
      Object {
        "pathname": "episode/",
        "search": "episode 1",
      }
    }
    pending={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <BreadCrumbs
          breadCrumbs={
            Array [
              Object {
                "active": false,
                "name": "Home",
                "url": "/",
              },
              Object {
                "active": false,
                "name": "The Powerpuff Girls",
                "url": "/shows/6771/details",
              },
              Object {
                "active": true,
                "name": undefined,
              },
            ]
          }
        />,
        <Container
          tag="div"
        >
          <h2
            className="m-y-2 show-title-color"
          />
          <Row
            tag="div"
          >
            <Col
              md={8}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
              xs={12}
            >
              <Row
                tag="div"
              >
                <Col
                  md={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <a
                    title="Click to move to undefined Episode original Page"
                  >
                    <img
                      alt="The Powerpuff Girls"
                      className="episode-image"
                      src="http://localhost:3000//images/no-image-available.jpg"
                      width="100%"
                    />
                  </a>
                </Col>
                <Col
                  md={8}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                </Col>
              </Row>
            </Col>
            <Col
              md={4}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
              xs={12}
            >
              <InfoWrapper
                info={
                  Array [
                    Object {
                      "data": "The Powerpuff Girls",
                      "name": "Show",
                    },
                    Object {
                      "data": "Season: undefined, Number: undefined",
                      "name": "Number",
                    },
                    Object {
                      "data": "May 22, 2019 at undefined",
                      "name": "Airdate",
                    },
                  ]
                }
                title="Episode Info"
              />
            </Col>
          </Row>
        </Container>,
      ],
      "status": false,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "breadCrumbs": Array [
            Object {
              "active": false,
              "name": "Home",
              "url": "/",
            },
            Object {
              "active": false,
              "name": "The Powerpuff Girls",
              "url": "/shows/6771/details",
            },
            Object {
              "active": true,
              "name": undefined,
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <h2
              className="m-y-2 show-title-color"
            />,
            <Row
              tag="div"
            >
              <Col
                md={8}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
                xs={12}
              >
                <Row
                  tag="div"
                >
                  <Col
                    md={4}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    <a
                      title="Click to move to undefined Episode original Page"
                    >
                      <img
                        alt="The Powerpuff Girls"
                        className="episode-image"
                        src="http://localhost:3000//images/no-image-available.jpg"
                        width="100%"
                      />
                    </a>
                  </Col>
                  <Col
                    md={8}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                  </Col>
                </Row>
              </Col>
              <Col
                md={4}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
                xs={12}
              >
                <InfoWrapper
                  info={
                    Array [
                      Object {
                        "data": "The Powerpuff Girls",
                        "name": "Show",
                      },
                      Object {
                        "data": "Season: undefined, Number: undefined",
                        "name": "Number",
                      },
                      Object {
                        "data": "May 22, 2019 at undefined",
                        "name": "Airdate",
                      },
                    ]
                  }
                  title="Episode Info"
                />
              </Col>
            </Row>,
          ],
          "tag": "div",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "m-y-2 show-title-color",
            },
            "ref": null,
            "rendered": null,
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Col
                  md={8}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <Row
                    tag="div"
                  >
                    <Col
                      md={4}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      <a
                        title="Click to move to undefined Episode original Page"
                      >
                        <img
                          alt="The Powerpuff Girls"
                          className="episode-image"
                          src="http://localhost:3000//images/no-image-available.jpg"
                          width="100%"
                        />
                      </a>
                    </Col>
                    <Col
                      md={8}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                    </Col>
                  </Row>
                </Col>,
                <Col
                  md={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <InfoWrapper
                    info={
                      Array [
                        Object {
                          "data": "The Powerpuff Girls",
                          "name": "Show",
                        },
                        Object {
                          "data": "Season: undefined, Number: undefined",
                          "name": "Number",
                        },
                        Object {
                          "data": "May 22, 2019 at undefined",
                          "name": "Airdate",
                        },
                      ]
                    }
                    title="Episode Info"
                  />
                </Col>,
              ],
              "tag": "div",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <Row
                    tag="div"
                  >
                    <Col
                      md={4}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      <a
                        title="Click to move to undefined Episode original Page"
                      >
                        <img
                          alt="The Powerpuff Girls"
                          className="episode-image"
                          src="http://localhost:3000//images/no-image-available.jpg"
                          width="100%"
                        />
                      </a>
                    </Col>
                    <Col
                      md={8}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                    </Col>
                  </Row>,
                  "md": 8,
                  "tag": "div",
                  "widths": Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ],
                  "xs": 12,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <Col
                        md={4}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        <a
                          title="Click to move to undefined Episode original Page"
                        >
                          <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />
                        </a>
                      </Col>,
                      <Col
                        md={8}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                      </Col>,
                    ],
                    "tag": "div",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": <a
                          title="Click to move to undefined Episode original Page"
                        >
                          <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />
                        </a>,
                        "md": 4,
                        "tag": "div",
                        "widths": Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ],
                        "xs": 12,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />,
                          "href": undefined,
                          "title": "Click to move to undefined Episode original Page",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "alt": "The Powerpuff Girls",
                            "className": "episode-image",
                            "src": "http://localhost:3000//images/no-image-available.jpg",
                            "width": "100%",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "img",
                        },
                        "type": "a",
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.",
                        "md": 8,
                        "tag": "div",
                        "widths": Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ],
                        "xs": 12,
                      },
                      "ref": null,
                      "rendered": "We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <InfoWrapper
                    info={
                      Array [
                        Object {
                          "data": "The Powerpuff Girls",
                          "name": "Show",
                        },
                        Object {
                          "data": "Season: undefined, Number: undefined",
                          "name": "Number",
                        },
                        Object {
                          "data": "May 22, 2019 at undefined",
                          "name": "Airdate",
                        },
                      ]
                    }
                    title="Episode Info"
                  />,
                  "md": 4,
                  "tag": "div",
                  "widths": Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ],
                  "xs": 12,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "info": Array [
                      Object {
                        "data": "The Powerpuff Girls",
                        "name": "Show",
                      },
                      Object {
                        "data": "Season: undefined, Number: undefined",
                        "name": "Number",
                      },
                      Object {
                        "data": "May 22, 2019 at undefined",
                        "name": "Airdate",
                      },
                    ],
                    "title": "Episode Info",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <BreadCrumbs
            breadCrumbs={
              Array [
                Object {
                  "active": false,
                  "name": "Home",
                  "url": "/",
                },
                Object {
                  "active": false,
                  "name": "The Powerpuff Girls",
                  "url": "/shows/6771/details",
                },
                Object {
                  "active": true,
                  "name": undefined,
                },
              ]
            }
          />,
          <Container
            tag="div"
          >
            <h2
              className="m-y-2 show-title-color"
            />
            <Row
              tag="div"
            >
              <Col
                md={8}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
                xs={12}
              >
                <Row
                  tag="div"
                >
                  <Col
                    md={4}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    <a
                      title="Click to move to undefined Episode original Page"
                    >
                      <img
                        alt="The Powerpuff Girls"
                        className="episode-image"
                        src="http://localhost:3000//images/no-image-available.jpg"
                        width="100%"
                      />
                    </a>
                  </Col>
                  <Col
                    md={8}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                  </Col>
                </Row>
              </Col>
              <Col
                md={4}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
                xs={12}
              >
                <InfoWrapper
                  info={
                    Array [
                      Object {
                        "data": "The Powerpuff Girls",
                        "name": "Show",
                      },
                      Object {
                        "data": "Season: undefined, Number: undefined",
                        "name": "Number",
                      },
                      Object {
                        "data": "May 22, 2019 at undefined",
                        "name": "Airdate",
                      },
                    ]
                  }
                  title="Episode Info"
                />
              </Col>
            </Row>
          </Container>,
        ],
        "status": false,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "breadCrumbs": Array [
              Object {
                "active": false,
                "name": "Home",
                "url": "/",
              },
              Object {
                "active": false,
                "name": "The Powerpuff Girls",
                "url": "/shows/6771/details",
              },
              Object {
                "active": true,
                "name": undefined,
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <h2
                className="m-y-2 show-title-color"
              />,
              <Row
                tag="div"
              >
                <Col
                  md={8}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <Row
                    tag="div"
                  >
                    <Col
                      md={4}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      <a
                        title="Click to move to undefined Episode original Page"
                      >
                        <img
                          alt="The Powerpuff Girls"
                          className="episode-image"
                          src="http://localhost:3000//images/no-image-available.jpg"
                          width="100%"
                        />
                      </a>
                    </Col>
                    <Col
                      md={8}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                    </Col>
                  </Row>
                </Col>
                <Col
                  md={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <InfoWrapper
                    info={
                      Array [
                        Object {
                          "data": "The Powerpuff Girls",
                          "name": "Show",
                        },
                        Object {
                          "data": "Season: undefined, Number: undefined",
                          "name": "Number",
                        },
                        Object {
                          "data": "May 22, 2019 at undefined",
                          "name": "Airdate",
                        },
                      ]
                    }
                    title="Episode Info"
                  />
                </Col>
              </Row>,
            ],
            "tag": "div",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "m-y-2 show-title-color",
              },
              "ref": null,
              "rendered": null,
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <Col
                    md={8}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    <Row
                      tag="div"
                    >
                      <Col
                        md={4}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        <a
                          title="Click to move to undefined Episode original Page"
                        >
                          <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />
                        </a>
                      </Col>
                      <Col
                        md={8}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                      </Col>
                    </Row>
                  </Col>,
                  <Col
                    md={4}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    <InfoWrapper
                      info={
                        Array [
                          Object {
                            "data": "The Powerpuff Girls",
                            "name": "Show",
                          },
                          Object {
                            "data": "Season: undefined, Number: undefined",
                            "name": "Number",
                          },
                          Object {
                            "data": "May 22, 2019 at undefined",
                            "name": "Airdate",
                          },
                        ]
                      }
                      title="Episode Info"
                    />
                  </Col>,
                ],
                "tag": "div",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <Row
                      tag="div"
                    >
                      <Col
                        md={4}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        <a
                          title="Click to move to undefined Episode original Page"
                        >
                          <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />
                        </a>
                      </Col>
                      <Col
                        md={8}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                      </Col>
                    </Row>,
                    "md": 8,
                    "tag": "div",
                    "widths": Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ],
                    "xs": 12,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        <Col
                          md={4}
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                          xs={12}
                        >
                          <a
                            title="Click to move to undefined Episode original Page"
                          >
                            <img
                              alt="The Powerpuff Girls"
                              className="episode-image"
                              src="http://localhost:3000//images/no-image-available.jpg"
                              width="100%"
                            />
                          </a>
                        </Col>,
                        <Col
                          md={8}
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                          xs={12}
                        >
                          We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                        </Col>,
                      ],
                      "tag": "div",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": <a
                            title="Click to move to undefined Episode original Page"
                          >
                            <img
                              alt="The Powerpuff Girls"
                              className="episode-image"
                              src="http://localhost:3000//images/no-image-available.jpg"
                              width="100%"
                            />
                          </a>,
                          "md": 4,
                          "tag": "div",
                          "widths": Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ],
                          "xs": 12,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <img
                              alt="The Powerpuff Girls"
                              className="episode-image"
                              src="http://localhost:3000//images/no-image-available.jpg"
                              width="100%"
                            />,
                            "href": undefined,
                            "title": "Click to move to undefined Episode original Page",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "alt": "The Powerpuff Girls",
                              "className": "episode-image",
                              "src": "http://localhost:3000//images/no-image-available.jpg",
                              "width": "100%",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "img",
                          },
                          "type": "a",
                        },
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": "We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.",
                          "md": 8,
                          "tag": "div",
                          "widths": Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ],
                          "xs": 12,
                        },
                        "ref": null,
                        "rendered": "We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.",
                        "type": [Function],
                      },
                    ],
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <InfoWrapper
                      info={
                        Array [
                          Object {
                            "data": "The Powerpuff Girls",
                            "name": "Show",
                          },
                          Object {
                            "data": "Season: undefined, Number: undefined",
                            "name": "Number",
                          },
                          Object {
                            "data": "May 22, 2019 at undefined",
                            "name": "Airdate",
                          },
                        ]
                      }
                      title="Episode Info"
                    />,
                    "md": 4,
                    "tag": "div",
                    "widths": Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ],
                    "xs": 12,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "info": Array [
                        Object {
                          "data": "The Powerpuff Girls",
                          "name": "Show",
                        },
                        Object {
                          "data": "Season: undefined, Number: undefined",
                          "name": "Number",
                        },
                        Object {
                          "data": "May 22, 2019 at undefined",
                          "name": "Airdate",
                        },
                      ],
                      "title": "Episode Info",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`src/pages/episode/index.jsx <Episode /> should render and match snapshot when is pending 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Episode
    episode={
      Object {
        "data": Object {
          "summary": "",
        },
      }
    }
    episodesList={
      Object {
        "image": Object {
          "original": "Original.jpg",
        },
        "name": "Episode",
      }
    }
    getEpisode={
      [MockFunction] {
        "calls": Array [
          Array [
            "episode/episode 1",
          ],
          Array [
            "episode/episode 1",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "episode/episode 1",
          },
          Object {
            "isThrow": false,
            "value": "episode/episode 1",
          },
        ],
      }
    }
    location={
      Object {
        "pathname": "episode/",
        "search": "episode 1",
      }
    }
    pending={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <BreadCrumbs
          breadCrumbs={
            Array [
              Object {
                "active": false,
                "name": "Home",
                "url": "/",
              },
              Object {
                "active": false,
                "name": "The Powerpuff Girls",
                "url": "/shows/6771/details",
              },
              Object {
                "active": true,
                "name": undefined,
              },
            ]
          }
        />,
        <Container
          tag="div"
        >
          <h2
            className="m-y-2 show-title-color"
          />
          <Row
            tag="div"
          >
            <Col
              md={8}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
              xs={12}
            >
              <Row
                tag="div"
              >
                <Col
                  md={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <a
                    title="Click to move to undefined Episode original Page"
                  >
                    <img
                      alt="The Powerpuff Girls"
                      className="episode-image"
                      src="http://localhost:3000//images/no-image-available.jpg"
                      width="100%"
                    />
                  </a>
                </Col>
                <Col
                  md={8}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                </Col>
              </Row>
            </Col>
            <Col
              md={4}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
              xs={12}
            >
              <InfoWrapper
                info={
                  Array [
                    Object {
                      "data": "The Powerpuff Girls",
                      "name": "Show",
                    },
                    Object {
                      "data": "Season: undefined, Number: undefined",
                      "name": "Number",
                    },
                    Object {
                      "data": "May 22, 2019 at undefined",
                      "name": "Airdate",
                    },
                  ]
                }
                title="Episode Info"
              />
            </Col>
          </Row>
        </Container>,
      ],
      "status": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "breadCrumbs": Array [
            Object {
              "active": false,
              "name": "Home",
              "url": "/",
            },
            Object {
              "active": false,
              "name": "The Powerpuff Girls",
              "url": "/shows/6771/details",
            },
            Object {
              "active": true,
              "name": undefined,
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <h2
              className="m-y-2 show-title-color"
            />,
            <Row
              tag="div"
            >
              <Col
                md={8}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
                xs={12}
              >
                <Row
                  tag="div"
                >
                  <Col
                    md={4}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    <a
                      title="Click to move to undefined Episode original Page"
                    >
                      <img
                        alt="The Powerpuff Girls"
                        className="episode-image"
                        src="http://localhost:3000//images/no-image-available.jpg"
                        width="100%"
                      />
                    </a>
                  </Col>
                  <Col
                    md={8}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                  </Col>
                </Row>
              </Col>
              <Col
                md={4}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
                xs={12}
              >
                <InfoWrapper
                  info={
                    Array [
                      Object {
                        "data": "The Powerpuff Girls",
                        "name": "Show",
                      },
                      Object {
                        "data": "Season: undefined, Number: undefined",
                        "name": "Number",
                      },
                      Object {
                        "data": "May 22, 2019 at undefined",
                        "name": "Airdate",
                      },
                    ]
                  }
                  title="Episode Info"
                />
              </Col>
            </Row>,
          ],
          "tag": "div",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "m-y-2 show-title-color",
            },
            "ref": null,
            "rendered": null,
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Col
                  md={8}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <Row
                    tag="div"
                  >
                    <Col
                      md={4}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      <a
                        title="Click to move to undefined Episode original Page"
                      >
                        <img
                          alt="The Powerpuff Girls"
                          className="episode-image"
                          src="http://localhost:3000//images/no-image-available.jpg"
                          width="100%"
                        />
                      </a>
                    </Col>
                    <Col
                      md={8}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                    </Col>
                  </Row>
                </Col>,
                <Col
                  md={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <InfoWrapper
                    info={
                      Array [
                        Object {
                          "data": "The Powerpuff Girls",
                          "name": "Show",
                        },
                        Object {
                          "data": "Season: undefined, Number: undefined",
                          "name": "Number",
                        },
                        Object {
                          "data": "May 22, 2019 at undefined",
                          "name": "Airdate",
                        },
                      ]
                    }
                    title="Episode Info"
                  />
                </Col>,
              ],
              "tag": "div",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <Row
                    tag="div"
                  >
                    <Col
                      md={4}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      <a
                        title="Click to move to undefined Episode original Page"
                      >
                        <img
                          alt="The Powerpuff Girls"
                          className="episode-image"
                          src="http://localhost:3000//images/no-image-available.jpg"
                          width="100%"
                        />
                      </a>
                    </Col>
                    <Col
                      md={8}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                    </Col>
                  </Row>,
                  "md": 8,
                  "tag": "div",
                  "widths": Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ],
                  "xs": 12,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <Col
                        md={4}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        <a
                          title="Click to move to undefined Episode original Page"
                        >
                          <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />
                        </a>
                      </Col>,
                      <Col
                        md={8}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                      </Col>,
                    ],
                    "tag": "div",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": <a
                          title="Click to move to undefined Episode original Page"
                        >
                          <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />
                        </a>,
                        "md": 4,
                        "tag": "div",
                        "widths": Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ],
                        "xs": 12,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />,
                          "href": undefined,
                          "title": "Click to move to undefined Episode original Page",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "alt": "The Powerpuff Girls",
                            "className": "episode-image",
                            "src": "http://localhost:3000//images/no-image-available.jpg",
                            "width": "100%",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "img",
                        },
                        "type": "a",
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.",
                        "md": 8,
                        "tag": "div",
                        "widths": Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ],
                        "xs": 12,
                      },
                      "ref": null,
                      "rendered": "We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <InfoWrapper
                    info={
                      Array [
                        Object {
                          "data": "The Powerpuff Girls",
                          "name": "Show",
                        },
                        Object {
                          "data": "Season: undefined, Number: undefined",
                          "name": "Number",
                        },
                        Object {
                          "data": "May 22, 2019 at undefined",
                          "name": "Airdate",
                        },
                      ]
                    }
                    title="Episode Info"
                  />,
                  "md": 4,
                  "tag": "div",
                  "widths": Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ],
                  "xs": 12,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "info": Array [
                      Object {
                        "data": "The Powerpuff Girls",
                        "name": "Show",
                      },
                      Object {
                        "data": "Season: undefined, Number: undefined",
                        "name": "Number",
                      },
                      Object {
                        "data": "May 22, 2019 at undefined",
                        "name": "Airdate",
                      },
                    ],
                    "title": "Episode Info",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <BreadCrumbs
            breadCrumbs={
              Array [
                Object {
                  "active": false,
                  "name": "Home",
                  "url": "/",
                },
                Object {
                  "active": false,
                  "name": "The Powerpuff Girls",
                  "url": "/shows/6771/details",
                },
                Object {
                  "active": true,
                  "name": undefined,
                },
              ]
            }
          />,
          <Container
            tag="div"
          >
            <h2
              className="m-y-2 show-title-color"
            />
            <Row
              tag="div"
            >
              <Col
                md={8}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
                xs={12}
              >
                <Row
                  tag="div"
                >
                  <Col
                    md={4}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    <a
                      title="Click to move to undefined Episode original Page"
                    >
                      <img
                        alt="The Powerpuff Girls"
                        className="episode-image"
                        src="http://localhost:3000//images/no-image-available.jpg"
                        width="100%"
                      />
                    </a>
                  </Col>
                  <Col
                    md={8}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                  </Col>
                </Row>
              </Col>
              <Col
                md={4}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
                xs={12}
              >
                <InfoWrapper
                  info={
                    Array [
                      Object {
                        "data": "The Powerpuff Girls",
                        "name": "Show",
                      },
                      Object {
                        "data": "Season: undefined, Number: undefined",
                        "name": "Number",
                      },
                      Object {
                        "data": "May 22, 2019 at undefined",
                        "name": "Airdate",
                      },
                    ]
                  }
                  title="Episode Info"
                />
              </Col>
            </Row>
          </Container>,
        ],
        "status": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "breadCrumbs": Array [
              Object {
                "active": false,
                "name": "Home",
                "url": "/",
              },
              Object {
                "active": false,
                "name": "The Powerpuff Girls",
                "url": "/shows/6771/details",
              },
              Object {
                "active": true,
                "name": undefined,
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <h2
                className="m-y-2 show-title-color"
              />,
              <Row
                tag="div"
              >
                <Col
                  md={8}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <Row
                    tag="div"
                  >
                    <Col
                      md={4}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      <a
                        title="Click to move to undefined Episode original Page"
                      >
                        <img
                          alt="The Powerpuff Girls"
                          className="episode-image"
                          src="http://localhost:3000//images/no-image-available.jpg"
                          width="100%"
                        />
                      </a>
                    </Col>
                    <Col
                      md={8}
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                      xs={12}
                    >
                      We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                    </Col>
                  </Row>
                </Col>
                <Col
                  md={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                  xs={12}
                >
                  <InfoWrapper
                    info={
                      Array [
                        Object {
                          "data": "The Powerpuff Girls",
                          "name": "Show",
                        },
                        Object {
                          "data": "Season: undefined, Number: undefined",
                          "name": "Number",
                        },
                        Object {
                          "data": "May 22, 2019 at undefined",
                          "name": "Airdate",
                        },
                      ]
                    }
                    title="Episode Info"
                  />
                </Col>
              </Row>,
            ],
            "tag": "div",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "m-y-2 show-title-color",
              },
              "ref": null,
              "rendered": null,
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <Col
                    md={8}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    <Row
                      tag="div"
                    >
                      <Col
                        md={4}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        <a
                          title="Click to move to undefined Episode original Page"
                        >
                          <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />
                        </a>
                      </Col>
                      <Col
                        md={8}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                      </Col>
                    </Row>
                  </Col>,
                  <Col
                    md={4}
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                    xs={12}
                  >
                    <InfoWrapper
                      info={
                        Array [
                          Object {
                            "data": "The Powerpuff Girls",
                            "name": "Show",
                          },
                          Object {
                            "data": "Season: undefined, Number: undefined",
                            "name": "Number",
                          },
                          Object {
                            "data": "May 22, 2019 at undefined",
                            "name": "Airdate",
                          },
                        ]
                      }
                      title="Episode Info"
                    />
                  </Col>,
                ],
                "tag": "div",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <Row
                      tag="div"
                    >
                      <Col
                        md={4}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        <a
                          title="Click to move to undefined Episode original Page"
                        >
                          <img
                            alt="The Powerpuff Girls"
                            className="episode-image"
                            src="http://localhost:3000//images/no-image-available.jpg"
                            width="100%"
                          />
                        </a>
                      </Col>
                      <Col
                        md={8}
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                        xs={12}
                      >
                        We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                      </Col>
                    </Row>,
                    "md": 8,
                    "tag": "div",
                    "widths": Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ],
                    "xs": 12,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        <Col
                          md={4}
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                          xs={12}
                        >
                          <a
                            title="Click to move to undefined Episode original Page"
                          >
                            <img
                              alt="The Powerpuff Girls"
                              className="episode-image"
                              src="http://localhost:3000//images/no-image-available.jpg"
                              width="100%"
                            />
                          </a>
                        </Col>,
                        <Col
                          md={8}
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                          xs={12}
                        >
                          We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.
                        </Col>,
                      ],
                      "tag": "div",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": <a
                            title="Click to move to undefined Episode original Page"
                          >
                            <img
                              alt="The Powerpuff Girls"
                              className="episode-image"
                              src="http://localhost:3000//images/no-image-available.jpg"
                              width="100%"
                            />
                          </a>,
                          "md": 4,
                          "tag": "div",
                          "widths": Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ],
                          "xs": 12,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <img
                              alt="The Powerpuff Girls"
                              className="episode-image"
                              src="http://localhost:3000//images/no-image-available.jpg"
                              width="100%"
                            />,
                            "href": undefined,
                            "title": "Click to move to undefined Episode original Page",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "alt": "The Powerpuff Girls",
                              "className": "episode-image",
                              "src": "http://localhost:3000//images/no-image-available.jpg",
                              "width": "100%",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "img",
                          },
                          "type": "a",
                        },
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": "We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.",
                          "md": 8,
                          "tag": "div",
                          "widths": Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ],
                          "xs": 12,
                        },
                        "ref": null,
                        "rendered": "We don\`t have a summary for Green Wing yet. Hang in there, or go ahead and contribute one.",
                        "type": [Function],
                      },
                    ],
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <InfoWrapper
                      info={
                        Array [
                          Object {
                            "data": "The Powerpuff Girls",
                            "name": "Show",
                          },
                          Object {
                            "data": "Season: undefined, Number: undefined",
                            "name": "Number",
                          },
                          Object {
                            "data": "May 22, 2019 at undefined",
                            "name": "Airdate",
                          },
                        ]
                      }
                      title="Episode Info"
                    />,
                    "md": 4,
                    "tag": "div",
                    "widths": Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ],
                    "xs": 12,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "info": Array [
                        Object {
                          "data": "The Powerpuff Girls",
                          "name": "Show",
                        },
                        Object {
                          "data": "Season: undefined, Number: undefined",
                          "name": "Number",
                        },
                        Object {
                          "data": "May 22, 2019 at undefined",
                          "name": "Airdate",
                        },
                      ],
                      "title": "Episode Info",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
